--- a/environment.yml
+++ b/environment.yml
@@ -1,102 +1,90 @@
-name: dot
+name: ss
 channels:
-  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - asttokens=2.4.1=pyhd8ed1ab_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - bzip2=1.0.8=hd590300_5
-  - ca-certificates=2023.11.17=hbcca054_0
-  - comm=0.1.4=pyhd8ed1ab_0
-  - debugpy=1.8.0=py38h17151c0_1
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - executing=2.0.1=pyhd8ed1ab_0
-  - importlib-metadata=7.0.0=pyha770c72_0
-  - importlib_metadata=7.0.0=hd8ed1ab_0
-  - ipykernel=6.26.0=pyhf8b6a83_0
-  - ipython=8.12.0=pyh41d4057_0
-  - jedi=0.19.1=pyhd8ed1ab_0
-  - jupyter_client=8.6.0=pyhd8ed1ab_0
-  - jupyter_core=5.5.0=py38h578d9bd_0
-  - ld_impl_linux-64=2.40=h41732ed_0
-  - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=13.2.0=h807b86a_3
-  - libgomp=13.2.0=h807b86a_3
-  - libnsl=2.0.1=hd590300_0
-  - libsodium=1.0.18=h36c2ea0_1
-  - libsqlite=3.44.0=h2797004_0
-  - libstdcxx-ng=13.2.0=h7e041cc_3
-  - libuuid=2.38.1=h0b41bf4_0
-  - libzlib=1.2.13=hd590300_5
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - ncurses=6.4=h59595ed_2
-  - nest-asyncio=1.5.8=pyhd8ed1ab_0
-  - openssl=3.2.0=hd590300_1
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pexpect=4.8.0=pyh1a96a4e_2
-  - pickleshare=0.7.5=py_1003
-  - pip=21.3.1=pyhd8ed1ab_0
-  - platformdirs=4.1.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.41=pyha770c72_0
-  - prompt_toolkit=3.0.41=hd8ed1ab_0
-  - psutil=5.9.5=py38h01eb140_1
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pygments=2.17.2=pyhd8ed1ab_0
-  - python=3.8.18=hd12c33a_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.8=4_cp38
-  - pyzmq=25.1.1=py38h34c975a_2
-  - readline=8.2=h8228510_1
-  - setuptools=68.2.2=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - tk=8.6.13=noxft_h4845f30_101
-  - tornado=6.3.3=py38h01eb140_1
-  - traitlets=5.14.0=pyhd8ed1ab_0
-  - typing_extensions=4.8.0=pyha770c72_0
-  - wcwidth=0.2.12=pyhd8ed1ab_0
-  - wheel=0.41.3=pyhd8ed1ab_0
-  - xz=5.2.6=h166bdaf_0
-  - zeromq=4.3.5=h59595ed_0
-  - zipp=3.17.0=pyhd8ed1ab_0
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - blas=1.0=mkl
+  - brotli-python=1.0.9=py38h6a678d5_7
+  - ca-certificates=2023.08.22=h06a4308_0
+  - certifi=2023.11.17=py38h06a4308_0
+  - cffi=1.16.0=py38h5eee18b_0
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - cryptography=41.0.3=py38hdda0065_0
+  - filelock=3.13.1=py38h06a4308_0
+  - freetype=2.12.1=h4a9f257_0
+  - fsspec=2023.10.0=py38h06a4308_0
+  - giflib=5.2.1=h5eee18b_3
+  - gmp=6.2.1=h295c915_3
+  - gmpy2=2.1.2=py38heeb90bb_0
+  - idna=3.4=py38h06a4308_0
+  - intel-openmp=2023.1.0=hdb19cb5_46306
+  - jinja2=3.1.2=py38h06a4308_0
+  - jpeg=9e=h5eee18b_1
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
+  - libdeflate=1.17=h5eee18b_1
+  - libffi=3.4.4=h6a678d5_0
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
+  - libpng=1.6.39=h5eee18b_0
+  - libprotobuf=3.20.3=he621ea3_0
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtiff=4.5.1=h6a678d5_0
+  - libwebp=1.3.2=h11a3e52_0
+  - libwebp-base=1.3.2=h5eee18b_0
+  - lz4-c=1.9.4=h6a678d5_0
+  - markupsafe=2.1.1=py38h7f8727e_0
+  - mkl=2023.1.0=h213fc3f_46344
+  - mkl-service=2.4.0=py38h5eee18b_1
+  - mkl_fft=1.3.8=py38h5eee18b_0
+  - mkl_random=1.2.4=py38hdb19cb5_0
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.2=hb69a4c5_1
+  - mpmath=1.3.0=py38h06a4308_0
+  - ncurses=6.4=h6a678d5_0
+  - networkx=3.1=py38h06a4308_0
+  - ninja=1.10.2=h06a4308_5
+  - ninja-base=1.10.2=hd09550d_5
+  - numpy=1.24.3=py38hf6e8229_1
+  - numpy-base=1.24.3=py38h060ed82_1
+  - openjpeg=2.4.0=h3ad879b_0
+  - openssl=3.0.12=h7f8727e_0
+  - pillow=10.0.1=py38ha6cbd5a_0
+  - pip=23.3.1=py38h06a4308_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pyopenssl=23.2.0=py38h06a4308_0
+  - pysocks=1.7.1=py38h06a4308_0
+  - python=3.8.18=h955ad1f_0
+  - readline=8.2=h5eee18b_0
+  - requests=2.31.0=py38h06a4308_0
+  - setuptools=68.0.0=py38h06a4308_0
+  - sqlite=3.41.2=h5eee18b_0
+  - sympy=1.12=py38h06a4308_0
+  - tbb=2021.8.0=hdb19cb5_0
+  - tk=8.6.12=h1ccaba5_0
+  - torchvision=0.15.2=cpu_py38h83e0c9b_0
+  - typing-extensions=4.7.1=py38h06a4308_0
+  - typing_extensions=4.7.1=py38h06a4308_0
+  - urllib3=1.26.18=py38h06a4308_0
+  - wheel=0.41.2=py38h06a4308_0
+  - xz=5.4.5=h5eee18b_0
+  - zlib=1.2.13=h5eee18b_0
+  - zstd=1.5.5=hc292b87_0
   - pip:
-      - absl-py==1.1.0
-      - attrs==21.4.0
-      - certifi==2023.7.22
-      - cffi==1.15.1
-      - charset-normalizer==3.2.0
-      - click==8.0.2
-      - cmake==3.27.7
-      - colorama==0.4.6
-      - customtkinter==5.2.0
-      - cycler==0.11.0
-      - darkdetect==0.8.0
-      - dlib==19.19.0
-      - dot==1.1.0
-      - exceptiongroup==1.1.2
-      - face-alignment==1.3.3
-      - filelock==3.12.2
-      - flatbuffers==2.0
-      - fonttools==4.34.4
-      - idna==2.10
-      - imageio==2.19.3
-      - iniconfig==2.0.0
-      - jinja2==3.1.2
+      - cmake==3.27.9
+      - coloredlogs==15.0.1
+      - contourpy==1.1.1
+      - cycler==0.12.1
+      - flatbuffers==23.5.26
+      - fonttools==4.46.0
+      - humanfriendly==10.0
+      - importlib-resources==6.1.1
       - joblib==1.3.2
-      - kiwisolver==1.4.3
-      - kornia==0.6.5
-      - lit==17.0.5
-      - llvmlite==0.38.1
-      - markupsafe==2.1.3
-      - matplotlib==3.5.2
-      - mediapipe==0.10.3
-      - mpmath==1.3.0
-      - networkx==2.8.4
-      - numba==0.55.2
-      - numpy==1.22.0
+      - kiwisolver==1.4.5
+      - lit==17.0.6
+      - matplotlib==3.7.4
       - nvidia-cublas-cu11==11.10.3.66
       - nvidia-cuda-cupti-cu11==11.7.101
       - nvidia-cuda-nvrtc-cu11==11.7.99
@@ -108,36 +96,22 @@ dependencies:
       - nvidia-cusparse-cu11==11.7.4.91
       - nvidia-nccl-cu11==2.14.3
       - nvidia-nvtx-cu11==11.7.91
-      - onnxruntime==1.9.0
+      - onnxruntime==1.16.3
       - onnxruntime-gpu==1.9.0
-      - opencv-contrib-python==4.5.5.62
       - opencv-python==4.5.5.62
-      - packaging==21.3
+      - packaging==23.2
       - pandas==2.0.3
-      - pillow==10.0.1
-      - pluggy==1.2.0
-      - protobuf==3.20.2
-      - pycparser==2.21
-      - pyparsing==3.0.9
-      - pytest==7.4.0
+      - protobuf==4.25.1
+      - pyparsing==3.1.1
+      - python-dateutil==2.8.2
       - pytz==2023.3.post1
-      - pywavelets==1.3.0
-      - pyyaml==5.4.1
-      - requests==2.31.0
-      - scikit-image==0.19.1
       - scikit-learn==1.3.2
-      - scipy==1.10.0
+      - scipy==1.10.1
+      - six==1.16.0
       - sklearn==0.0
-      - sounddevice==0.4.6
-      - sympy==1.12
       - threadpoolctl==3.2.0
-      - tifffile==2022.5.4
-      - tomli==2.0.1
       - torch==2.0.1
-      - torchvision==0.15.2
-      - tqdm==4.64.0
       - triton==2.0.0
-      - typing-extensions==4.3.0
       - tzdata==2023.3
-      - urllib3==1.26.18
-prefix: /home/yeldar/anaconda3/envs/dot
+      - zipp==3.17.0
+prefix: /home/yeldar/anaconda3/envs/ss
