CReated new branch for 3090server's version

--- a/env.yml
+++ b/env.yml
@@ -47,8 +47,6 @@ dependencies:
   - networkx=3.1=py38h06a4308_0
   - ninja=1.10.2=h06a4308_5
   - ninja-base=1.10.2=hd09550d_5
-  - numpy=1.24.3=py38hf6e8229_1
-  - numpy-base=1.24.3=py38h060ed82_1
   - openjpeg=2.4.0=h3ad879b_0
   - openssl=3.0.12=h7f8727e_0
   - pillow=10.0.1=py38ha6cbd5a_0
@@ -85,6 +83,7 @@ dependencies:
       - kiwisolver==1.4.5
       - lit==17.0.6
       - matplotlib==3.7.4
+      - numpy==1.23.5
       - nvidia-cublas-cu11==11.10.3.66
       - nvidia-cuda-cupti-cu11==11.7.101
       - nvidia-cuda-nvrtc-cu11==11.7.99
@@ -103,7 +102,6 @@ dependencies:
       - pandas==2.0.3
       - protobuf==4.25.1
       - pyparsing==3.1.1
-      - python-dateutil==2.8.2
       - pytz==2023.3.post1
       - scikit-learn==1.3.2
       - scipy==1.10.1
