--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
       context: .
       dockerfile: ./Dockerfile
     volumes:
-       - /mnt/8TB/ml_projects_yeldar/:/app/data_dir:rw
+      - /mnt/8TB/ml_projects_yeldar/patchnet/M1_3_4:/app/data_dir/M1_3_4:rw
+      - /mnt/8TB/ml_projects_yeldar/patchnet/M1_3_4_val:/app/data_dir/M1_3_4_val:rw
       #  - ./src:/workspace:rw
       #  - ./test_faces:/workspace/test_faces:rw
       #  - /home/user/ml_projects/Yeldar/data/SiWMv2_processed/live:/workspace/SiWMv2_processed/live:rw
