--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,10 @@ services:
       context: .
       dockerfile: ./Dockerfile
     volumes:
-      # - /mnt/8TB/ml_projects_yeldar/patchnet/M1_3_4_val:/app/data_dir/M1_3_4_val:rw
       - .:/app:rw
-      #  - ./test_faces:/workspace/test_faces:rw
-      #  - /home/user/ml_projects/Yeldar/data/SiWMv2_processed/live:/workspace/SiWMv2_processed/live:rw
-      - /mnt/8TB/ml_projects_yeldar/patchnet/train:/app/data_dir/train:rw
-      - /mnt/8TB/ml_projects_yeldar/patchnet/val:/app/data_dir/val:rw
-      - /mnt/8TB/ml_projects_yeldar/patchnet/test:/app/data_dir/test:rw
+      - /mnt/8TB/ml_projects_yeldar/MaskSynthez/M4_clean_cropped:/app/data_dir/M4_clean_cropped:rw
+      - /mnt/8TB/ml_projects_yeldar/cropped_youtube_insta_tiktok:/app/data_dir/mask_test:rw
+      - /mnt/8TB/ml_projects_yeldar/patchnet:/app/data_dir:rw
 
     restart: on-failure
     deploy:
